fix:Fix bug menu was covered by slideshow.

--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -3,7 +3,6 @@
 .dropdown {
     position: absolute;
     left: 0;
-    z-index: 1;
 
     width: min(1240px, 100%);
     padding-top: 54px;
