--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -19,6 +19,7 @@
     @extend %flexItemsCenter;
 
     position: relative;
+    z-index: 1;
 
     padding: 30px 0;
 
